<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.clarinetmaster.simplecalculator.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prevExpressionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/expressionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prevExpressionView"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/answerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/expressionView"
            android:textColor="@color/answer"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expressionView"
            android:layout_toStartOf="@id/answerView"
            android:text="@string/answerLabel"
            android:layout_marginEnd="5dp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonSeven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerView"
            android:text="@string/seven"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerView"
            android:layout_toEndOf="@id/buttonSeven"
            android:text="@string/eight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerView"
            android:layout_toEndOf="@id/buttonEight"
            android:text="@string/nine"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDivide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerView"
            android:layout_toEndOf="@id/buttonNine"
            android:text="@string/divide"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSeven"
            android:text="@string/four"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEight"
            android:layout_toEndOf="@id/buttonFour"
            android:text="@string/five"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonNine"
            android:layout_toEndOf="@id/buttonFive"
            android:text="@string/six"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonDivide"
            android:layout_toEndOf="@id/buttonSix"
            android:text="@string/multiply"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonOne"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFour"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFive"
            android:layout_toEndOf="@id/buttonOne"
            android:text="@string/two"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSix"
            android:layout_toEndOf="@id/buttonTwo"
            android:text="@string/three"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonMultiply"
            android:layout_toEndOf="@id/buttonThree"
            android:text="@string/minus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonOne"
            android:text="@string/dot"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonZero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonTwo"
            android:layout_toEndOf="@id/buttonDot"
            android:text="@string/zero"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonPower"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonThree"
            android:layout_toEndOf="@id/buttonZero"
            android:text="@string/power"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonMinus"
            android:layout_toEndOf="@id/buttonPower"
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonOpenedBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonDot"
            android:text="@string/openedBracket"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonClosedBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonZero"
            android:layout_toEndOf="@+id/buttonDot"
            android:text="@string/closedBracket"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPlus"
            android:layout_toEndOf="@id/buttonClosedBracket"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPlus"
            android:layout_toEndOf="@id/buttonClear"
            android:text="@string/equal"
            android:textSize="20sp" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>